<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.peruntech</groupId>
	<artifactId>perun-core-services</artifactId>
	<version>4.1.1-SNAPSHOT</version>
	<packaging>bundle</packaging>
	<name>Perun Core</name>
	<url>https://github.com/PerunTech/perun-core-services</url>
	<organization>
		<name>Perun Technologies</name>
		<url>http://peruntech.org</url>
	</organization>
	<scm>
		<connection>scm:git:git@github.com:PerunTech/perun-core-services.git</connection>
		<developerConnection>
			scm:git:git@github.com:PerunTech/perun-core-services.git</developerConnection>
		<url>https://github.com/PerunTech/perun-core-services.git</url>
	</scm>
	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>karikjtomi</id>
			<name>Tomi Karikj</name>
			<email>t.karikj@prtech.mk</email>
			<url>http://www.perun.tech</url>
			<organization>Perun Technologies</organization>
			<organizationUrl>http://www.perun.tech</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>Europe/Skopje</timezone>
		</developer>
		<developer>
			<id>ristepejov</id>
			<name>Riste Pejov</name>
			<email>r.pejov@prtech.mk</email>
			<url>http://www.perun.tech</url>
			<organization>Perun Technologies</organization>
			<organizationUrl>http://www.perun.tech</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>Europe/Skopje</timezone>
		</developer>
	</developers>
	<description>Perun-core-services is the back-ned bundle of the Svarog
		Business Platform GUI</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<testSourceDirectory>tests</testSourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}</directory>
				<includes>
					<include>labels/*</include>
					<include>config/*</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.jreleaser</groupId>
				<artifactId>jreleaser-maven-plugin</artifactId>
				<version>1.19.0</version>
				<configuration>
					<jreleaser>
						<signing>
							<active>ALWAYS</active>
							<armored>true</armored>
						</signing>
						<deploy>
							<maven>
								<nexus2>
									<maven-central>
										<active>ALWAYS</active>
										<url>
											https://s01.oss.sonatype.org/service/local</url>
										<closeRepository>false</closeRepository>
										<releaseRepository>false</releaseRepository>
										<stagingRepositories>
											target/staging-deploy</stagingRepositories>
									</maven-central>
								</nexus2>
							</maven>
						</deploy>
					</jreleaser>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<useReleaseProfile>false</useReleaseProfile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.0.0</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<useNativeGit>false</useNativeGit>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>
						${project.build.outputDirectory}/version.properties</generateGitPropertiesFilename>
					<commitIdGenerationMode>full</commitIdGenerationMode>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<!-- From here is the bundle configuration for the OSGI container -->
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>5.1.9</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
						<Bundle-Name>Perun Core Services</Bundle-Name>
						<Bundle-Vendor>Perun.Tech</Bundle-Vendor>
						<Bundle-Description>
							A bundle that provides basic perun core web
							services. This bundle doesn't contain React code
						</Bundle-Description>
						<Bundle-Activator>
							com.prtech.perun.services.ws.Activator
						</Bundle-Activator>
						<Export-Package>
							com.prtech.perun,
							com.prtech.perun.services.ws,
							com.prtech.menu.manager,
							com.prtech.models,
							com.prtech.form,
							com.prtech.sequence.manager
						</Export-Package>
						<Import-Package>
							com.eclipsesource.jaxrs.publisher;version=!,*
						</Import-Package>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.osgi/org.osgi.service.http -->
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.service.http</artifactId>
			<version>1.2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.ws.rs/jsr311-api -->
		<dependency>
			<groupId>org.peruntech</groupId>
			<artifactId>svarog</artifactId>
			<version>[4.0.0-SNAPSHOT,5.0.0)</version>
			<scope>provided</scope>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart -->
		<!--
		https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server -->
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>2.22</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-multipart</artifactId>
			<version>2.22</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.0</version>
		</dependency>

<dependency>
    <groupId>org.opensaml</groupId>
    <artifactId>opensaml-core</artifactId>
    <version>3.3.0</version>
</dependency>
<dependency>
    <groupId>org.opensaml</groupId>
    <artifactId>opensaml-saml-api</artifactId>
    <version>3.3.0</version>
</dependency>
<dependency>
    <groupId>org.opensaml</groupId>
    <artifactId>opensaml-saml-impl</artifactId>
    <version>3.3.0</version>
</dependency>
<dependency>
    <groupId>org.opensaml</groupId>
    <artifactId>opensaml-security-api</artifactId>
    <version>3.3.0</version>
</dependency>
<dependency>
    <groupId>org.opensaml</groupId>
    <artifactId>opensaml-security-impl</artifactId>
    <version>3.3.0</version>
</dependency>
<dependency>
    <groupId>org.opensaml</groupId>
    <artifactId>opensaml-xmlsec-api</artifactId>
    <version>3.3.0</version>
</dependency>
<dependency>
    <groupId>org.opensaml</groupId>
    <artifactId>opensaml-xmlsec-impl</artifactId>
    <version>3.3.0</version>
</dependency>
<dependency>
    <groupId>net.shibboleth.utilities</groupId>
    <artifactId>java-support</artifactId>
    <version>7.5.0</version>
</dependency>
<dependency>
	<groupId>net.sf.jasperreports</groupId>
	<artifactId>jasperreports</artifactId>
	<version>6.8.1</version>
</dependency>
<dependency>
	<groupId>net.sf.jasperreports</groupId>
	<artifactId>jasperreports-fonts</artifactId>
	<version>6.20.6</version>
</dependency>
<dependency>
	<groupId>net.sf.barcode4j</groupId>
	<artifactId>barcode4j</artifactId>
	<version>2.0</version>
	<exclusions>
		<exclusion>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
		</exclusion>
	</exclusions>
</dependency>

	</dependencies>
	<repositories>
		<repository>
			<id>jaspersoft-third-party</id>
			<url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>jr-ce-releases</id>
			<url>https://jaspersoft.jfrog.io/jaspersoft/jr-ce-releases/</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>
	<profiles>
		<profile>
			<id>Oracle</id>
			<dependencies>
				<dependency>
					<groupId>com.oracle</groupId>
					<artifactId>ojdbc8</artifactId>
					<version>12.2.0.1.0</version>
				</dependency>
				<dependency>
					<groupId>svarog</groupId>
					<artifactId>svarog-io</artifactId>
					<version>[1.0.4,)</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>PostgreSQL</id>
			<dependencies>
				<dependency>
					<groupId>org.postgresql</groupId>
					<artifactId>postgresql</artifactId>
					<version>42.5.4</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.4.1</version>
						<configuration>
							<failOnError>false</failOnError>
							<reportPlugins>
								<plugin>
									<groupId>org.apache.maven.plugins</groupId>
									<artifactId>maven-javadoc-plugin</artifactId>
									<configuration>
										<doclint>none</doclint>
									</configuration>
								</plugin>
							</reportPlugins>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadoc</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
